# corewar

./: CMakeLists.txt  Makefile  a.out  asm  corewar  corewar.c  corewar.h  error.c  privet_lexa  test.cor  test.s  test_1.cor  test_1.s
ft_printf/libft/: ft_memcpy.c
includes/: corewar.h  corewar_op.h  corewar_vm.h  op.h
libft/: libft.h
src/: battle.c  corewar.c  error.c  help_func.c  info.c  init.c  init_cursors.c  needs_rework.c  op_add.c  op_aff.c  op_and.c  op_fork.c  op_ld.c  op_ldi.c  op_lfork.c  op_live.c  op_lld.c  op_lldi.c  op_or.c  op_st.c  op_sti.c  op_sub.c  op_xor.c  op_zjmp.c  parse.c  print_info.c  utils.c
src/operations/: add.c  aff.c  and.c  fork.c  get_x.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  op_live.c  or.c  st.c  sti.c  sub.c  xor.c  zjmp.c
